--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
+    "react-transition-group": "^1.1.2",
     "reactstrap": "^4.8.0"
   },
   "scripts": {
