--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router-dom": "^4.2.2",
+    "bootstrap": "4.0.0-alpha.6",
+    "react": "15.3.0",
+    "react-dom": "15.3.0",
+    "react-router-dom": "4.2.2",
     "react-scripts": "1.0.13",
-    "react-transition-group": "^1.1.2",
-    "reactstrap": "^4.8.0"
+    "react-transition-group": "1.1.2",
+    "reactstrap": "4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
